--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,22 @@
 
 # Go workspace file
 go.work
-go.work.sum
 
-# env file
-.env
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
 
-
-# macos
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Build artifacts
+/dist/
+/bin/
